<resources>
    <string name="app_name">Comical</string>

    <!--Splash activity strings-->
    <string name="read_the_best">Read the best comics</string>

    <string name="facebook_app_id">487438621815665</string>
    <string name="fb_login_protocol_scheme">fb487438621815665</string>

    <!--Intro activity strings-->
    <string name="skip">Skip</string>
    <string name="intro_one_heading">Find your favorite comics</string>
    <string name="intro_one_description">Just grab your coffee, relax, open our app and only read your favorite comics, but also stay inside the news about geek world!</string>
    <string name="intro_two_heading">Read everywhere</string>
    <string name="intro_two_description">Get access to all comics online or choose the ones you like best, save them offline and get access whenever you want!</string>

    <!--Login activity strings-->
    <string name="welcome">Welcome to Comical!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or_enter_with">Or Enter With</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="dont_have_account"><u>Don\'t have account?</u></string>

    <!--Sign up activity strings-->
    <string name="go_back"><u>Go Back</u></string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_fill_all_fields">Please fill all the fields.</string>
    <string name="invalid_email_address">Please enter valid email address.</string>
    <string name="invalid_password">Password must be greater than 5 characters.</string>

    <!--Home activity strings-->
    <string name="comics">Comics</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="check_update">Check Update</string>

    <!--Comic detail activity strings-->
    <string-array name="comic_detail_pager_title">
        <item>About</item>
        <item>Comics</item>
        <item>Movies</item>
    </string-array>
    <string-array name="profile_pager_title">
        <item>Reading</item>
        <item>Read</item>
        <item>Favorite</item>
    </string-array>
    <string name="no_comic_found">No comics found!</string>
    <string name="no_movies_found">No movies found!</string>
    <string name="publisher">Publisher:</string>
    <string name="first_appearance">First Appearance:</string>
    <string name="history">History:</string>
    <string name="author">Author:</string>
    <string name="status">Status:</string>
    <string name="rate_comic">Rate Comic</string>
    <string name="select_your_mood">Please select your mood!</string>
    <string name="rating_saved">Hi! Your mood has been saved successfully.</string>

    <!-- Setting activity strings -->
    <string name="setting">Setting</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>

    <!-- Change password activity strings -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

    <!-- Edit profile activity strings -->
    <string name="phone_number">Phone Number</string>
    <string name="profile_status">Profile Status</string>
    <string name="edit">Edit</string>


    <!--  Read chapter activity  -->
    <string name="congratulation">Congratulation! You have read this chapter. Do you want to add it in your read list?</string>
    <string name="add_to_read">Add to Read</string>

</resources>
