<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".activities.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/viewTopContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewLogoLogin"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/comical_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewWelcomeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/welcome"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLogin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewEmailLogin"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:src="@drawable/ic_action_message"
                app:layout_constraintBottom_toBottomOf="@+id/editTextEmailLogin"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailLogin"
                app:layout_constraintTop_toTopOf="@+id/editTextEmailLogin" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_40sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/_15ssp"
                app:backgroundTint="@color/colorSecondaryLightText"
                app:layout_constraintTop_toBottomOf="@+id/viewTopContainer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewPasswordLogin"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:src="@drawable/ic_action_lock"
                app:layout_constraintBottom_toBottomOf="@+id/editTextPasswordLogin"
                app:layout_constraintStart_toStartOf="@+id/editTextPasswordLogin"
                app:layout_constraintTop_toTopOf="@+id/editTextPasswordLogin" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_40sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/_15ssp"
                app:backgroundTint="@color/colorSecondaryLightText"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/bg_login_button"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />

            <TextView
                android:id="@+id/textViewEnterWithLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/or_enter_with"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/bg_facebook_button"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/textViewEnterWithLogin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewFacebook"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:elevation="5dp"
                android:src="@drawable/ic_action_facebook"
                app:layout_constraintBottom_toBottomOf="@+id/buttonFacebook"
                app:layout_constraintStart_toStartOf="@+id/buttonFacebook"
                app:layout_constraintTop_toTopOf="@+id/buttonFacebook" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/bg_google_button"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonFacebook" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewGoogle"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:elevation="5dp"
                android:src="@drawable/ic_action_google"
                app:layout_constraintBottom_toBottomOf="@+id/buttonGoogle"
                app:layout_constraintStart_toStartOf="@+id/buttonGoogle"
                app:layout_constraintTop_toTopOf="@+id/buttonGoogle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>